# base-cacheable-class

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
base_cacheable_class/: __init__.py  base.py
base_cacheable_class/cache/: __init__.py
base_cacheable_class/cache/in_memory/: __init__.py  cache.py  decorator.py
base_cacheable_class/cache/redis/: __init__.py  cache.py  decorator.py
base_cacheable_class/cache/valkey/: __init__.py  cache.py  config.py  decorator.py
base_cacheable_class/interfaces/: __init__.py  cache.py  decorator.py
base_cacheable_class/models/: __init__.py  cache_item.py
examples/: basic_example.py  invalidation_example.py  redis_example.py
examples/di/: dependency_injection_advanced.py  dependency_injection_basic.py  dependency_injection_service_layer.py  dependency_injection_testing.py
tests/: test_base.py  test_cache_integration.py  test_interface.py
